# rdpdesk

./: README.md
rdpdesk/: ChangeLog  Makefile.am  Makefile.in  config.status  configure
rdpdesk/debian/: README.source  changelog  copyright  rules
rdpdesk/desktop/: Makefile.in
rdpdesk/doc/: Makefile.am
rdpdesk/icons/: Makefile.am  Makefile.in
rdpdesk/po/: Makefile.in  Makefile.in.in  rdpdesk.pot  ru.po
rdpdesk/src/: Makefile.am  Makefile.in  RDPDesk.sln  bencoded.cpp  bencoded.hpp  config.hpp  defineds.hpp  locale_helper.cpp  locale_helper.hpp  main.cpp  main.hpp  rdpclients.rc  resource.h  wfica.tlh
rdpdesk/src/gui/: main_window.cpp  main_window.hpp  settings_dialog.cpp  settings_dialog.hpp  small_shoot.cpp  small_shoot.hpp  splitter.cpp  splitter.hpp  tree_group.cpp  tree_group.hpp
rdpdesk/src/gui/config/: fastconn_dialog.cpp  fastconn_dialog.hpp  rdp_dialogs.cpp  rdp_dialogs.hpp
rdpdesk/src/include/: proto.hpp
rdpdesk/src/modules/CatcherWindowID/: CatcherWindowID.cpp  CatcherWindowID.hpp
rdpdesk/src/modules/autoupdate/: autoupdate.cpp
rdpdesk/src/proto/: BasicConnection.cpp  BasicConnection.hpp  FRDPConnection_nix.cpp  FRDPConnection_nix.hpp  FRDPKeyboard.cpp  FRDPKeyboard.hpp  FRDPOptionsDialog.cpp  FRDPOptionsDialog.hpp  ICAConnection_nix.cpp  ICAConnection_nix.hpp  ICAConnection_win.cpp  ICAConnection_win.hpp  ICAOptionsDialog.hpp  RDPConnection_nix.cpp  RDPConnection_nix.hpp  RDPConnection_win.cpp  RDPConnection_win.hpp  RDPOptionsDialog.cpp  RDPOptionsDialog.hpp  RFBConnection_win.cpp  RFBOptionsDialog.cpp  UltraVncAx.h  UltraVncAx_i.c  network_helper.cpp  rdpbasedefs.hpp  ultravncax.idl  ultravncax.tlb  wxRDP_nix.cpp  wxRDP_nix.hpp  wxRDP_win.cpp  wxRDP_win.hpp  wxactivex.h
rdpdesk/src/proto/AxVncViewer/: ClientConnection.cpp  ClientConnection.h  VNCOptions.cpp  VNCviewerApp.cpp  vncviewer.vcproj
rdpdesk/src/proto/AxVncViewer/UltraVncAx/: UltraVncAx.cpp  UltraVncAx.dsp  UltraVncAx.h  UltraVncAx.idl  UltraVncAx.sln  UltraVncAxObj.cpp  UltraVncAxObj.h  UltraVncAxObj.htm  UltraVncAx_p.c  resource.h
rdpdesk/src/proto/AxVncViewer/french/: french.vcproj
rdpdesk/src/proto/AxVncViewer/french/res/: vncviewer.rc
rdpdesk/src/proto/AxVncViewer/german/res/: vncviewer.rc
rdpdesk/src/proto/AxVncViewer/rdr/: rdr.vcproj
rdpdesk/src/proto/AxVncViewer/res/: resource.h  vncviewer.rc
rdpdesk/src/proto/AxVncViewer/zlib/: zlib.vcproj
rdpdesk/src/proto/vnc_unixsrc/vncviewer/: desktop.c  fullscreen.c  listen.c  selection.c  sockets.c  tight.c  vncviewer.c
rdpdesk/src/res/: camera-photo.xpm  emblem-unreadable.xpm  go-down.xpm  go-down16.xpm  help-browser.xpm  input-keyboard16.xpm  main.xpm  network-offline.xpm  network-transmit-receive.xpm  preferences-desktop.xpm  process-stop.xpm  user-desktop.xpm
trunk/rdpdesk/: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure.in  libtool
trunk/rdpdesk/debian/: README.Debian  changelog  control  menu  rules
trunk/rdpdesk/desktop/: Makefile.am  Makefile.in  rdpdesk.desktop
trunk/rdpdesk/doc/: Makefile.in  doc_ru.zip_
trunk/rdpdesk/icons/: Makefile.in
trunk/rdpdesk/po/: ChangeLog  Makevars  rdpdesk.pot  ru.po
trunk/rdpdesk/src/: Makefile.in  bencoded.cpp  bencoded.hpp  config.hpp.in  defineds.hpp  locale_helper.cpp  locale_helper.hpp  main.cpp  main.hpp  rdpclients.rc  rdpclients.sln  rdpclients.vcproj  wfica.tli
trunk/rdpdesk/src/gui/: Makefile  main_window.hpp  settings_dialog.hpp  small_shoot.hpp  splitter.cpp  splitter.hpp  tree_group.hpp
trunk/rdpdesk/src/gui/config/: Makefile  fastconn_dialog.cpp  fastconn_dialog.hpp  rdp_dialogs.cpp  rdp_dialogs.hpp
trunk/rdpdesk/src/include/: proto.hpp
trunk/rdpdesk/src/modules/CatcherWindowID/: CatcherWindowID.cpp  CatcherWindowID.hpp
trunk/rdpdesk/src/modules/autoupdate/: autoupdate.cpp  autoupdate.hpp
trunk/rdpdesk/src/proto/: BasicConnection.cpp  BasicConnection.hpp  FRDPConnection_nix.cpp  FRDPKeyboard.cpp  FRDPKeyboard.hpp  FRDPOptionsDialog.cpp  FRDPOptionsDialog.hpp  ICAConnection_nix.cpp  ICAConnection_nix.hpp  ICAConnection_win.cpp  ICAConnection_win.hpp  ICAOptionsDialog.cpp  ICAOptionsDialog.hpp  RDPConnection_nix.cpp  RDPConnection_nix.hpp  RDPConnection_win.cpp  RDPConnection_win.hpp  RDPOptionsDialog.cpp  RDPOptionsDialog.hpp  RFBConnection_nix.cpp  RFBConnection_nix.hpp  RFBConnection_win.hpp  RFBOptionsDialog.hpp  network_helper.cpp  network_helper.hpp  rdpbasedefs.hpp  wxactivex.cpp
trunk/rdpdesk/src/proto/AxVncViewer/: FileTransfer.cpp  TextChat.cpp  VNCviewerApp32.cpp  vncviewer.dsp  vncviewer.sln
trunk/rdpdesk/src/proto/AxVncViewer/UltraVncAx/: UltraVncAx.aps  UltraVncAx.rc  UltraVncAx.tlb  UltraVncAx.vcproj  UltraVncAxGlobalConstructor.cpp  UltraVncAxGlobalConstructor.h  UltraVncAxObj.rgs  UltraVncAx_i.c
trunk/rdpdesk/src/proto/AxVncViewer/french/res/: vncviewer.aps
trunk/rdpdesk/src/proto/AxVncViewer/german/: german.vcproj
trunk/rdpdesk/src/proto/AxVncViewer/libjpeg/: libjpeg.vcproj
trunk/rdpdesk/src/proto/AxVncViewer/omnithread/: omnithread.vcproj
trunk/rdpdesk/src/proto/AxVncViewer/res/: Thumbs.db
trunk/rdpdesk/src/proto/AxVncViewer/res/stat/: Thumbs.db
trunk/rdpdesk/src/proto/vnc_unixsrc/vncviewer/: Imakefile  argsresources.c  colour.c  misc.c  popup.c  rfbproto.c  shm.c  tunnel.c  vncviewer.h  zlib.c
trunk/rdpdesk/src/res/: camera-photo16.xpm  document-open.xpm  document-save.xpm  edit-select-all.xpm  folder.xpm  input-keyboard.xpm  list-add.xpm  media-eject.xpm  preferences-system-windows.xpm  preferences-system.xpm  system-log-out.xpm  system-search.xpm  utilities-terminal.xpm  view-fullscreen.xpm
trunk/rdpdesk/tools/: gettext.sh  gettext_ru.sh
