## Process this file with automake to produce Makefile.in

appicon16dir = ${datarootdir}/icons/hicolor/16x16/apps
appicon16_DATA = \
    16x16/apps/rdpdesk.png 

appicon22dir = ${datarootdir}/icons/hicolor/22x22/apps
appicon22_DATA = \
    22x22/apps/rdpdesk.png 

appicon24dir = ${datarootdir}/icons/hicolor/24x24/apps
appicon24_DATA = \
    24x24/apps/rdpdesk.png 

appicon32dir = ${datarootdir}/icons/hicolor/32x32/apps
appicon32_DATA = \
    32x32/apps/rdpdesk.png 

appicon48dir = ${datarootdir}/icons/hicolor/48x48/apps
appicon48_DATA = \
    48x48/apps/rdpdesk.png 

appicondir = ${datarootdir}/pixmaps/
appicon_DATA = \
    rdpdesk.png 


EXTRA_DIST = \
    $(appicon16_DATA) \
    $(appicon22_DATA) \
    $(appicon24_DATA) \
    $(appicon32_DATA) \
    $(appicon48_DATA) \
    $(appicon_DATA) 

